--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,11 @@ requires-python = ">=3.13"
 dependencies = [
     "django (>=5.2.7,<6.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
-    "psycopg2 (>=2.9.11,<3.0.0)"
+    "psycopg2 (>=2.9.11,<3.0.0)",
+    "django-stubs[compatible-mypy] (>=5.2.7,<6.0.0)",
+    "python-decouple (>=3.8,<4.0)",
+    "pip-system-certs (>=5.3,<6.0)",
+    "certifi (>=2025.10.5,<2026.0.0)"
 ]
 
 
