--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "django-stubs[compatible-mypy] (>=5.2.7,<6.0.0)",
     "python-decouple (>=3.8,<4.0)",
     "pip-system-certs (>=5.3,<6.0)",
-    "certifi (>=2025.10.5,<2026.0.0)"
+    "certifi (>=2025.10.5,<2026.0.0)",
+    "django-taggit (>=6.1.0,<7.0.0)"
 ]
 
 
