--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "python-decouple (>=3.8,<4.0)",
     "pip-system-certs (>=5.3,<6.0)",
     "certifi (>=2025.10.5,<2026.0.0)",
-    "django-taggit (>=6.1.0,<7.0.0)"
+    "django-taggit (>=6.1.0,<7.0.0)",
+    "markdown (>=3.9,<4.0)"
 ]
 
 
