--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,10 @@ dependencies = [
     "pip-system-certs (>=5.3,<6.0)",
     "certifi (>=2025.10.5,<2026.0.0)",
     "django-taggit (>=6.1.0,<7.0.0)",
-    "markdown (>=3.9,<4.0)"
+    "markdown (>=3.9,<4.0)",
+    "uvicorn (>=0.38.0,<0.39.0)",
+    "gunicorn (>=23.0.0,<24.0.0)",
+    "uvicorn-worker (>=0.4.0,<0.5.0)"
 ]
 
 
