--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "markdown (>=3.9,<4.0)",
     "uvicorn (>=0.38.0,<0.39.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
-    "uvicorn-worker (>=0.4.0,<0.5.0)"
+    "uvicorn-worker (>=0.4.0,<0.5.0)",
+    "pillow (>=12.0.0,<13.0.0)"
 ]
 
 
