--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,12 @@ dependencies = [
     "uvicorn (>=0.38.0,<0.39.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
     "uvicorn-worker (>=0.4.0,<0.5.0)",
-    "pillow (>=12.0.0,<13.0.0)"
+    "pillow (>=12.0.0,<13.0.0)",
+    "social-auth-app-django (>=5.6.0,<6.0.0)",
+    "django-extensions (>=4.1,<5.0)",
+    "werkzeug (>=3.1.3,<4.0.0)",
+    "pyopenssl (>=25.3.0,<26.0.0)",
+    "cryptography (>=46.0.3,<47.0.0)"
 ]
 
 
