--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ dependencies = [
     "django-extensions (>=4.1,<5.0)",
     "werkzeug (>=3.1.3,<4.0.0)",
     "pyopenssl (>=25.3.0,<26.0.0)",
-    "cryptography (>=46.0.3,<47.0.0)"
+    "cryptography (>=46.0.3,<47.0.0)",
+    "requests (>=2.32.5,<3.0.0)"
 ]
 
 
