--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,10 @@ dependencies = [
     "werkzeug (>=3.1.3,<4.0.0)",
     "pyopenssl (>=25.3.0,<26.0.0)",
     "cryptography (>=46.0.3,<47.0.0)",
-    "requests (>=2.32.5,<3.0.0)"
+    "requests (>=2.32.5,<3.0.0)",
+    "python-slugify (>=8.0.4,<9.0.0)",
+    "easy-thumbnails (>=2.10.1,<3.0.0)",
+    "djangorestframework (>=3.16.1,<4.0.0)"
 ]
 
 
