--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Nikita",email = "nyuskov@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.13,<4"
 dependencies = [
     "django (>=5.2.7,<6.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
@@ -29,7 +29,9 @@ dependencies = [
     "requests (>=2.32.5,<3.0.0)",
     "python-slugify (>=8.0.4,<9.0.0)",
     "easy-thumbnails (>=2.10.1,<3.0.0)",
-    "djangorestframework (>=3.16.1,<4.0.0)"
+    "djangorestframework (>=3.16.1,<4.0.0)",
+    "reportlab (>=4.4.4,<5.0.0)",
+    "svglib (>=1.6.0,<2.0.0)",
 ]
 
 
