--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "djangorestframework (>=3.16.1,<4.0.0)",
     "reportlab (>=4.4.4,<5.0.0)",
     "svglib (>=1.6.0,<2.0.0)",
+    "redis (>=7.0.1,<8.0.0)",
 ]
 
 
