--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ dependencies = [
     "djangorestframework (>=3.16.1,<4.0.0)",
     "reportlab (>=4.4.4,<5.0.0)",
     "redis (>=7.0.1,<8.0.0)",
+    "celery (>=5.5.3,<6.0.0)",
+    "flower (>=2.0.1,<3.0.0)",
 ]
 
 
