--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "redis (>=7.0.1,<8.0.0)",
     "celery (>=5.5.3,<6.0.0)",
     "flower (>=2.0.1,<3.0.0)",
+    "stripe (>=13.1.2,<14.0.0)",
 ]
 
 
