--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -22,6 +22,12 @@ http {
 	charset utf-8;
 
     server {
+        listen 80 default_server;
+        server_name _;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
         listen 443 ssl;
 		server_name localhost;
         ssl_certificate     /etc/nginx/certificates/server.crt;
