--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "celery (>=5.5.3,<6.0.0)",
     "flower (>=2.0.1,<3.0.0)",
     "stripe (>=13.1.2,<14.0.0)",
+    "weasyprint (>=66.0,<67.0)",
 ]
 
 
