--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,8 @@ services:
       - static_volume:/var/www
     depends_on:
       - db
+      - redis
+      - rabbitmq
     networks:
       - server_network
   db:
@@ -49,6 +51,13 @@ services:
     ports:
       - "5672:5672" # AMQP protocol
       - "15672:15672" # Management UI
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    restart: always
 networks:
   server_network:
     driver: bridge
@@ -56,3 +65,4 @@ volumes:
   postgres_data:
   socket_volume:
   static_volume:
+  redis_data:
